# nexus-agi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
nexus/: __init__.py  kernel.py
nexus/agents/: __init__.py  base.py  orchestrator.py  reflection.py  specialist.py
nexus/api/: server.py
nexus/budget/: budget_manager.py
nexus/cli/: main.py
nexus/memory/: __init__.py  episodic.py  long_term.py  semantic.py  working.py
nexus/planning/: __init__.py  chain_of_thought.py  hierarchical.py  mcts.py  tree_of_thought.py
nexus/rsi/: __init__.py  generator.py  improver.py  monitor.py  optimizer.py
nexus/safety/: __init__.py  alignment.py  constitutional.py  filter.py  validator.py
nexus/tools/: __init__.py  chainer.py  executor.py  registry.py  sandbox.py
nexus/world_model/: __init__.py  causal.py  model.py  prediction.py
