[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexus-agi"
version = "1.0.0"
description = "NEXUS-AGI: Advanced General Intelligence Framework with RSI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SULFIKAR", email = "agentajul@gmail.com"}]
keywords = ["agi", "artificial-intelligence", "multi-agent", "rsi", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tiktoken>=0.5.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "websockets>=12.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]
gpu = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]

[project.scripts]
nexus = "nexus.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
